Fix:Styles on Mobile

--- a/src/style.sass
+++ b/src/style.sass
@@ -56,7 +56,7 @@ button,li
   transition: all .5s
   position: fixed
   background: $neutral-White
-  top: 20%
+  top: 100px
   left: 50%
   transform: translateX(-50%)
   z-index: 10
@@ -67,7 +67,7 @@ button,li
   .menu__close
     position: absolute
     @include transparentButton()
-    right: 1%
+    right: 0
     top: -38%
     width: 1.5625rem
     height: 1.5625rem
@@ -89,7 +89,7 @@ button,li
   height: 100vh
   position: fixed
   background: transparentize(black,0.75 )
-  top: 15%
+  top: 75px
   width: 100%
   left: 0
   z-index: 1
